--- a/crates/selene_engines/Cargo.toml
+++ b/crates/selene_engines/Cargo.toml
@@ -10,3 +10,4 @@ path = "src/lib.rs"
 selene_kernel_contracts = { path = "../selene_kernel_contracts" }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+ureq = { version = "2", features = ["json"] }
