--- a/crates/selene_engines/Cargo.toml
+++ b/crates/selene_engines/Cargo.toml
@@ -11,3 +11,6 @@ selene_kernel_contracts = { path = "../selene_kernel_contracts" }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 ureq = { version = "2", features = ["json"] }
+aes-gcm = "0.10"
+base64 = "0.22"
+rand = "0.8"
