--- a/crates/selene_tools/Cargo.toml
+++ b/crates/selene_tools/Cargo.toml
@@ -8,3 +8,9 @@ path = "src/lib.rs"
 
 [dependencies]
 selene_kernel_contracts = { path = "../selene_kernel_contracts" }
+selene_engines = { path = "../selene_engines" }
+rpassword = "7"
+
+[[bin]]
+name = "selene"
+path = "src/bin/selene.rs"
